--- a/.snippets/14.md
+++ b/.snippets/14.md
@@ -8,3 +8,4 @@ affected: all
 - to be compatible as speficied in `pyproject.toml` classifier list
 - add Python matrix to test workflow with Python versions `['3.8', '3.9', '3.10', '3.11']`
 - use `actions/checkout` with version `v4`
+- use Python 3.8 compatible typing, replace `|` with `Union`
