--- a/.snippets/14.md
+++ b/.snippets/14.md
@@ -1,4 +1,4 @@
-## Build package with Python 3.8
+## Build package with Python 3.9
 <!--
 type: bugfix
 scope: all
@@ -6,6 +6,9 @@ affected: all
 -->
 
 - to be compatible as speficied in `pyproject.toml` classifier list
-- add Python matrix to test workflow with Python versions `['3.8', '3.9', '3.10', '3.11']`
+- add Python matrix to test workflow with Python versions `['3.9', '3.10', '3.11']`
 - use `actions/checkout` with version `v4`
-- use Python 3.8 compatible typing, replace `|` with `Union`
+- use Python 3.9 compatible typing
+    - replace `|` with `Union`
+    - use `List` instead of `list` for typing
+    - use `Dict` instead of `dict` for typing
