parse changelog in dry-run mode and skip publish and release steps

--- a/.snippets/23.md
+++ b/.snippets/23.md
@@ -7,4 +7,4 @@ affected: all
 
 - Document `--no-internal` option in `README`
 - Use `jq` instead of complex Python based `changelog.json` parsing in `release` and `test-release` workflows
-- Skip building, testing, publishing and creating (pre)releases if the latest change was marked as `internal`
+- Skip publishing and creating (pre)releases if the latest change was marked as `internal`
